Major CSS cleanup. This is hopefully an end of layout issues related to
	* style-classic.css:
	* style.css:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/src/gobject.c:
	  Major CSS cleanup. This is hopefully an end of layout issues related
	  to the fixed navigation bar.


svn path=/trunk/; revision=670

--- a/style-classic.css
+++ b/style-classic.css
@@ -27,51 +27,38 @@
     top: 0em ! important;
   }
   /* this is needed so that the local anchors are displayed below the naviagtion */
-  div.refnamediv a[name], div.refsect1 a[name], div.index a[name], div.glossary a[name]
+  div.footnote a[name], div.refnamediv a[name], div.refsect1 a[name], div.refsect2 a[name], div.index a[name], div.glossary a[name], div.sect1 a[name]
   {
     position: relative;
-    top: -4.5em;
-  }
-  /* make space for the fixed navigation bar */
-  div.refentry, div.chapter, div.reference, div.part, div.book, div.glossary, div.index, div.sect1, div.appendix, div.preface
-  {
-    position: relative;
-    top: 3em;
-    z-index: 0;
-  }
-  div.glossary, div.index
-  {
-    position: relative;
-    top: 2em;
-    z-index: 0;
+    padding-top:4.5em;
   }
   /* this seems to be a bug in the xsl style sheets when generating indexes */
   div.index div.index
   {
     top: 0em;
   }
-  div.refnamediv
-  {
-    margin-top: 2em;
-  }
+  /* make space for the fixed navigation bar and add space at the bottom so that
+   * link targets appear somewhat close to top
+   */
   body
   {
+    padding-top: 3.2em;
     padding-bottom: 20em;
   }
   /* style and size the navigation bar */
   table.navigation#top
   {
+    position: fixed;
     background: #ffeeee;
     border: solid 1px #ffaaaa;
     margin-top: 0;
     margin-bottom: 0;
-    position: fixed;
     top: 0;
     left: 0;
-    height: 2em;
-    z-index: 1;
+    height: 3em;
+    z-index: 10;
   }
-  .navigation a
+  .navigation a, .navigation a:visited
   {
     color: #770000;
   }
@@ -100,7 +87,7 @@
     margin-bottom: 0;
     top: 0;
     left: 0;
-    height: 2em;
+    height: 3em;
   }
 }
 
@@ -184,3 +171,33 @@ hr
 {
   margin-bottom: 0.0em
 }
+
+/* code listings */
+
+.listing_frame {
+  border: solid 1px #aaaaff;
+  padding: 0px;
+}
+
+.listing_lines, .listing_code {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0.5em;
+}
+.listing_lines {
+  background: #aaaaff;
+  color: #222222;
+}
+.listing_code {
+  /* tango:sky blue 0 */
+  background: #eeeeff;
+}
+.listing_code .programlisting {
+  /* override from previous */
+  border: none 0px;
+  padding: 0px;
+}
+.listing_lines pre, .listing_code pre {
+  margin: 0px;
+}
+
