--- a/style.css
+++ b/style.css
@@ -27,46 +27,40 @@
   {
     position: relative;
     top: 0em ! important;
+    
   }
   /* this is needed so that the local anchors are displayed below the naviagtion */
-  div.refnamediv a[name], div.refsect1 a[name], div.index a[name], div.glossary a[name]
+  div.footnote a[name], div.refnamediv a[name], div.refsect1 a[name], div.refsect2 a[name], div.index a[name], div.glossary a[name], div.sect1 a[name]
   {
     position: relative;
-    top: -4.5em;
-  }
-  /* make space for the fixed navigation bar */
-  div.refentry, div.chapter, div.reference, div.part, div.book, div.glossary, div.index, div.sect1, div.appendix, div.preface
-  {
-    position: relative;
-    top: 3.1em;
-    z-index: 0;
+    padding-top:4.5em;
   }
   /* this seems to be a bug in the xsl style sheets when generating indexes */
   div.index div.index
   {
     top: 0em;
   }
-  div.refnamediv
-  {
-    margin-top: 2em;
-  }
+  /* make space for the fixed navigation bar and add space at the bottom so that
+   * link targets appear somewhat close to top
+   */
   body
   {
+    padding-top: 3.2em;
     padding-bottom: 20em;
   }
   /* style and size the navigation bar */
   table.navigation#top
   {
+    position: fixed;
     /* tango:scarlet red 0/1 */
     background: #ffe6e6;
     border: solid 1px #ef2929;
     margin-top: 0;
     margin-bottom: 0;
-    position: fixed;
     top: 0;
     left: 0;
-    height: 2em;
-    z-index: 1;
+    height: 3em;
+    z-index: 10;
   }
   .navigation a, .navigation a:visited
   {
@@ -101,7 +95,7 @@
     margin-bottom: 0;
     top: 0;
     left: 0;
-    height: 2em;
+    height: 3em;
   }
 }
 
@@ -220,10 +214,6 @@ hr
 .listing_lines, .listing_code {
   margin-top: 0px;
   margin-bottom: 0px;
-  /*padding-right: 2px;
-  padding-left: 2px;
-  padding-top: 0px;
-  padding-bottom: 0px;*/
   padding: 0.5em;
 }
 .listing_lines {
@@ -244,5 +234,4 @@ hr
 .listing_lines pre, .listing_code pre {
   margin: 0px;
 }
-
 
